Time: 2 ms (99.70%) | Memory: 45 MB (77.13%) - LeetSync