@@ -1,5 +1,4 @@
 class Solution {
-    HashSet<List<Integer>> set = new HashSet<>();
 
     public List<List<Integer>> subsetsWithDup(int[] nums) {
 
@@ -10,24 +9,25 @@ class Solution {
         Arrays.sort(nums);
         List<List<Integer>> ans = new ArrayList<>();
         List<Integer> list = new ArrayList<>();
-        buildSets(nums , 0 , ans , list );
+        buildSets(nums , 0 , ans , list  );
         return ans;
     }
 
     public void buildSets( int[]nums , int i , List<List<Integer>> ans , List<Integer> list ){
         if(i==nums.length){
-            if(set.contains(list)){
-                return;
-            }
             ans.add(new ArrayList<>(list)); 
-            set.add(new ArrayList<>(list));
             return;
         }
-        list.add(nums[i]);
-        buildSets(nums , i+1 , ans , list);
-       
-        list.removeLast();
-        buildSets(nums , i+1 , ans , list);
+
+        list.add(nums[i]); 
+        buildSets(nums , i+1 , ans , list );
+
+        list.remove(list.size()-1);
+        int idx = i+1;
+        while(idx!=nums.length && nums[idx-1]==nums[idx]){
+            idx++;
+        }
+        buildSets(nums , idx , ans , list );
 
     }
 }
